--- a/assets/stylesheets/shared/_buttons.scss
+++ b/assets/stylesheets/shared/_buttons.scss
@@ -32,6 +32,9 @@ input[type="submit"] {
 	}
 }
 
+.button {
+	display: inline-block;
+}
 
 button.secondary,
 .button.secondary {
